export const enum EPriority {
  LOW = 'LOW',
  HIGH = 'HIGH',
  URGENT = 'URGENT'
}
