@startuml
    class User {
        Long id
        String login
        String password
        String firstName
        String lastName
        String email
        String langKey
        String imageUrl
        String activationKey
        String resetKey
        Instant resetDate
        UserRole role
    }

    abstract class UserRole {
        boolean availability
    }

    class Doctor {
        boolean isPreferredDoctor
        Collection<TurnEvent> turnEvents
    }
    class Anesthesiologist {
        Collection<TurnEvent> turnEvents
    }
    class Assistant {
        Collection<TurnEvent> turnEvents
    }
    class ICUNurse {
        Collection<TurnEvent> turnEvents
    }

    class TurnEvent {
        String patientName
        String patientInformation
        Doctor doctor
        Collection<Assistant> assistants
        ICUNurse icuNurse
        EPriority priority
        String ward
        String roomNumber
        Collection<Pair<LocalDateTime, LocalDateTime>> potentialTimeSlots
        Pair<LocalDateTime, LocalDateTime> definiteTimeSlot
    }

    enum EPriority {
        low
        high
        urgent
    }

    User "1" *-- "1" UserRole
    Doctor -up-|> UserRole
    Anesthesiologist -up-|> UserRole
    Assistant -up-|> UserRole
    ICUNurse -up-|> UserRole

    Doctor "1" --o "1..n" TurnEvent
    Anesthesiologist "1" --o "1..n" TurnEvent
    Assistant "1..n" --o "1..n" TurnEvent
    ICUNurse "1" --o "1..n" TurnEvent

    UserRole "1..n" -- "1..n" TurnEvent

@enduml
